--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat|Hammersmith+One" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
   <script type="text/javascript" src="js/jquery-2.2.4.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -15,7 +16,27 @@
   <link rel="shortcut icon" type="image/png" href="img/pacman-hexagons-32-149047.png">
 </head>
 
-<body>
+<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#"><img src="img/pacman-hexagons-32-149047.png"></a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="#services">SERVICES</a></li>
+          <li><a href="#contact">CONTACT</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
   <div class="jumbotron text-center">
     <h1>Evalu8ion.me</h1>
     <p>We specialize in helping you achieve your goals, through effective motivation
@@ -23,18 +44,19 @@
     <form class="form-inline">
       See what's coming soon!
       <div class="input-group">
-        <input type="email" class="form-control" size="50" placeholder="Email Address" required>
+        <input type="email" id="subscribe-email" class="form-control" size="50" placeholder="Email Address" required>
         <div class="input-group-btn">
-          <button type="button" class="btn btn-danger">
+          <button type="button" class="btn btn-danger" onclick="subscribe()">
             Subscribe
             <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </button>
         </div>
       </div>
     </form>
+    <p id="subscribe-message"></p>
   </div>
 
-  <div class="container-fluid">
+  <div id="about" class="container-fluid">
     <div class="row">
       <div class="col-sm-8">
         <h2>About Evalu8ion.me</h2>
@@ -66,7 +88,7 @@
   </div>
 </div>
 
-<div class="container-fluid text-center">
+<div id="services" class="container-fluid text-center">
   <h2>SERVICES</h2>
   <h4>What We Offer:</h4>
   <br>
@@ -128,58 +150,91 @@
 
 <div class="machine-learning">
   <h2 class="text-center">Why We Use Machine Learning</h2>
-    <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-      <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
-  </ol>
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-    <h3><strong>What is machine learning?</strong></h3>
-      <span style="font-style:normal;">
-      <p>"Machine learning is a method of data analysis that automates analytical
-      model building. Using algorithms that iteratively learn from data,
-      machine learning allows computers to find hidden insights without
-      being explicitly programmed where to look." (<a href="https://www.sas.com/en_us/insights/analytics/machine-learning.html#"
-      target="_new">https://www.sas.com</a>)</p>
-      </span>
-    </div>
-    <div class="item">
-      <h3><strong>How does machine learning relate to artificial intelligence?</strong></h3>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+      <h3><strong>What is machine learning?</strong></h3>
         <span style="font-style:normal;">
-          <p>"Artificial intelligence is, essentially, the simulation of intelligence
-          in computers. Machine learning, on the other hand, is a form of artificial
-          intelligence in which the computer learns for itself how to complete a task.
-          And it’s this that has been at the heart of many of the recent huge
-          developments in the field of AI." (<a href="https://medium.com/on-coding/what-is-machine-learning-and-why-is-it-important-4255000e19bc"
-            target="_blank">https://medium.com</a>)</p></span>
+        <p>"Machine learning is a method of data analysis that automates analytical
+        model building. Using algorithms that iteratively learn from data,
+        machine learning allows computers to find hidden insights without
+        being explicitly programmed where to look." (<a href="https://www.sas.com/en_us/insights/analytics/machine-learning.html#"
+        target="_new">https://www.sas.com</a>)</p>
+        </span>
+      </div>
+      <div class="item">
+        <h3><strong>How does machine learning relate to artificial intelligence?</strong></h3>
+          <span style="font-style:normal;">
+            <p>"Artificial intelligence is, essentially, the simulation of intelligence
+            in computers. Machine learning, on the other hand, is a form of artificial
+            intelligence in which the computer learns for itself how to complete a task.
+            And it’s this that has been at the heart of many of the recent huge
+            developments in the field of AI." (<a href="https://medium.com/on-coding/what-is-machine-learning-and-why-is-it-important-4255000e19bc"
+              target="_blank">https://medium.com</a>)</p></span>
+      </div>
+      <div class="item">
+        <h3><strong>Why is machine learning important?</strong></h3>
+          <span style="font-style:normal;">
+            <p>"'Machine learning' is a revolution as big as the internet or personal computers.
+              We're in the middle of a historic moment. Now computers can learn from experience.
+              This breakthrough is unimaginably important for understanding where technology
+              is going, and where society is going with it." (<a href="http://www.businessinsider.com/machine-learning-as-important-as-the-internet-2016-3"
+              target="_blank">www.businessinsider.com</a>)</span></h4>
+      </div>
     </div>
-    <div class="item">
-      <h3><strong>Why is machine learning important?</strong></h3>
-        <span style="font-style:normal;">
-          <p>"'Machine learning' is a revolution as big as the internet or personal computers.
-            We're in the middle of a historic moment. Now computers can learn from experience.
-            This breakthrough is unimaginably important for understanding where technology
-            is going, and where society is going with it." (<a href="http://www.businessinsider.com/machine-learning-as-important-as-the-internet-2016-3"
-            target="_blank">www.businessinsider.com</a>)</span></h4>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+<div id="contact" class="container-fluid bg-grey">
+  <h2 class="text-center">CONTACT</h2>
+  <div class="row">
+    <div class="col-sm-5">
+      <p>Contact us and we'll get back to you within 24 hours.</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Lindon, UT, US</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> zzzuzz@gmail.com</p>
+    </div>
+    <div class="col-sm-7">
+      <div class="row">
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+        </div>
+        <div class="col-sm-6 form-group">
+          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+        </div>
+      </div>
+      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+      <div class="row">
+        <div class="col-sm-12 form-group">
+          <button class="btn btn-default pull-right" type="submit">Send</button>
+        </div>
+      </div>
     </div>
   </div>
+</div>
 
-  <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+<footer class="container-fluid text-center">
+  <a href="#myPage" title="To Top">
+    <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-</div>
+</footer>
 
 </body>
 </html>
