--- a/index.html
+++ b/index.html
@@ -243,16 +243,25 @@
       <div class="col-sm-7">
         <div class="row">
           <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+            <input class="form-control" id="contact-name" name="name" placeholder="Name" type="text" required>
           </div>
           <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+            <input class="form-control" id="contact-email" name="email" placeholder="Email" type="email" required>
           </div>
         </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+        <div class="row">
+          <div class="col-sm-12">
+            <textarea class="form-control" id="contact-comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
+          </div>
+        </div>
         <div class="row">
           <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
+            <button class="btn btn-default pull-right" type="submit" onclick="sendContactInfo()">Send</button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm-12">
+            <p id="contact-response"></p>
           </div>
         </div>
       </div>
