Feat: Add table display of weight data

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-scale small"></span>
         <h4>WEIGHT TRACKING</h4>
-        <p>Enter your weight each day to see your trends and tendencies.</p>
+        <p><a href="weight.html" target="_blank">Enter your weight</a> each day to see your trends and tendencies.</p>
       </div>
       <div class="col-sm-4">
         <span class="glyphicon glyphicon-send small "></span>
